--- a/client/app/components/DraftList/DraftListItem.css
+++ b/client/app/components/DraftList/DraftListItem.css
@@ -1,9 +1,17 @@
 #draft-list {
   position: relative;
-  min-height: 300px;
-  max-height: auto;
+  height: 600px;
+  width: 500px;
+  overflow: auto;
+  margin: 10px 0;
+  border: 3px solid #000;
+  padding-top: 5px;
 }
 
 .drafted-card {
   position: absolute;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-top: 5px;
+  margin-left: 5px;
 }
