Created a top banner that appears in the draft page and contains the website's title and the search bar. Reoriented search results and hover effects to fit with the new top banner

--- a/client/app/components/TopBanner/Search/SearchList.css
+++ b/client/app/components/TopBanner/Search/SearchList.css
@@ -1,10 +1,8 @@
 #search-list {
-  position: relative;
-  margin-top: 2px;
+  position: absolute;
   width: 306px;
   border: 1px solid #000;
   border-radius: 2px;
-  /* overflow: hidden; */
   display: flex;
   flex-direction: column;
 }
