Added card info text and aligned it and the card image displayed on hover. Added some box shadow effects for focus clarity

--- a/client/app/components/TopBanner/Search/Search.css
+++ b/client/app/components/TopBanner/Search/Search.css
@@ -3,6 +3,15 @@
   height: 1.75em;
   outline: none;
   font-size: 0.9rem;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding-left: 5px;
+  transition: box-shadow .2s;
+}
+
+#search-bar:focus {
+  box-shadow: 1px 1px 2px #808080;
+  transition: box-shadow .2s;
 }
 
 #search-area {
