--- a/client/app/components/TopBanner/Search/SearchList.css
+++ b/client/app/components/TopBanner/Search/SearchList.css
@@ -3,6 +3,8 @@
   width: 306px;
   border: 1px solid #000;
   border-radius: 2px;
+  box-shadow: 1px 1px 2px #808080,
+              -1px 1px 2px #808080;
   display: flex;
   flex-direction: column;
 }
