--- a/client/app/components/TopBanner/Search/Search.css
+++ b/client/app/components/TopBanner/Search/Search.css
@@ -24,10 +24,14 @@
   background-color: hsl(0, 100%, 95%);
   color: hsl(6, 75%, 49%);
   border: 1px solid #000;
-  width: 302px;
+  width: 304px;
+  height: 1.75em;
   padding: 1px 3px;
+  padding-top: 10px;
   padding-right: 0;
   font-size: 1rem;
+  box-shadow: 1px 1px 2px #808080,
+              -1px 1px 2px #808080;
 }
 
 #search-button {
