--- a/client/app/components/DraftList/DraftListItem.css
+++ b/client/app/components/DraftList/DraftListItem.css
@@ -11,8 +11,9 @@
   position: absolute;
   border-radius: 10px;
   overflow: hidden;
-  margin-top: 5px;
-  margin-left: 5px;
+  margin: 5px 0 0 5px;
+  width: 146px;
+  height: 204px;
 }
 
 .drafted-card img {
