--- a/client/app/components/DisplayCardInfo/DisplayCardInfo.css
+++ b/client/app/components/DisplayCardInfo/DisplayCardInfo.css
@@ -14,7 +14,8 @@
   grid-column-start: 1;
   width: 288px;
   height: 400px;
-  border-radius: 10px;
+  border-radius: 15px;
+  border: 1px solid #000;
   overflow: hidden;
 }
 
