--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -3,6 +3,12 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 #app {
   height: 98.5vh;
 }
