--- a/client/app/components/DisplayCardInfo/DisplayCardInfo.css
+++ b/client/app/components/DisplayCardInfo/DisplayCardInfo.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 15% 85%;
-  align-items: top;
+  align-items: start;
   justify-items: center;
   column-gap: 20px;
   padding: 20px;
