Flip cards now work, but the code is very messy. I need to break it up to multiple components, one for each type of card. Code cleanup due after lunch

--- a/client/app/components/DisplayCardInfo/DisplayCardInfo.css
+++ b/client/app/components/DisplayCardInfo/DisplayCardInfo.css
@@ -19,9 +19,13 @@
   margin-bottom: 16px;
 }
 
-#display-card-info-image-container {
+#diplay-card-info-image-and-button {
   grid-column-start: 1;
   grid-row-start: 2;
+}
+
+#display-card-info-image-container {
+
   max-width: 290px;
   max-height: 403px;
 }
