Code has been cleaned up. Sepereated normal+saga cards to their own component (NormalCard) and transform+mdfc cards to their own component (DoubleFacedCard).

--- a/client/app/components/TopBanner/Search/SearchListItem.css
+++ b/client/app/components/TopBanner/Search/SearchListItem.css
@@ -1,6 +1,6 @@
 .search-item {
   width: 301px;
-  height: 1.5rem;
+  min-height: 1.5rem;
   padding: 1px 5px;
   padding-right: 0;
   background-color: #fff;
