--- a/client/app/components/CardPreview/CardPreview.css
+++ b/client/app/components/CardPreview/CardPreview.css
@@ -19,25 +19,32 @@
   margin-bottom: 16px;
 }
 
-#diplay-card-info-image-and-button {
+.card-preview-grid-col-1 {
   grid-column-start: 1;
   grid-row-start: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#display-card-info-image-container {
-
+.card-preview-image-container {
   max-width: 290px;
   max-height: 403px;
 }
 
-#display-card-info-image-container img {
+.card-preview-image-container img {
   max-width: 100%;
   height: auto;
   border-radius: 5%;
   border: 1px solid #000;
 }
 
-#display-card-info-text-container {
+.flip-card-button {
+  margin-top: 15px;
+  width: 60%;
+}
+
+.card-preview-text-container {
   grid-column-start: 2;
   grid-row-start: 2;
   padding: 10px;
@@ -46,13 +53,13 @@
   flex-direction: column;
 }
 
-#display-card-text-name-mana {
+.card-preview-name-mana {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-#display-card-name {
+.card-preview-name {
   font-size: 1.1rem;
 }
 
@@ -75,7 +82,7 @@
   box-shadow: -1px 2px 0 #333;
 }
 
-#display-card-flavor-text {
+.display-card-flavor-text {
   font-family: "MPlantin", Georgia, "Times New Roman", serif;
   font-weight: 300;
 }
