New Feature: When an item in the stash is clicked, instead of adding it to the draft, it will pop a set of buttons to either add it to the draft (if it's your turn) or remove it from the stash (whenever). Also added a favicon to the website

--- a/client/app/components/CardPreview/CardPreview.css
+++ b/client/app/components/CardPreview/CardPreview.css
@@ -140,3 +140,18 @@
   font-family: "MPlantin", Georgia, "Times New Roman", serif;
   font-weight: 300;
 }
+
+.card-preview-oracle-text-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.oracle-text-image-container {
+  height: 1rem;
+  width: 1rem;
+}
+
+.oracle-text-image-container img {
+  width: 100%;
+  height: auto;
+}
