--- a/client/app/components/TheStash/StashItem.css
+++ b/client/app/components/TheStash/StashItem.css
@@ -1,13 +1,46 @@
 .stash-image-container {
+  position: relative;
   margin: 0 5px;
   min-width: 146px;
   height: 204px;
-  border-radius: 8px;
-  overflow: hidden;
-  border: 1px solid #000;
 }
 
 .stash-image-container img {
   width: 100%;
   height: auto;
+  border-radius: 8px;
+  border: 1px solid #000;
+}
+
+.stash-add-to-draft,
+.stash-remove-from-stash {
+  position: absolute;
+  top: -5px;
+  cursor: pointer;
+  border: 1px solid #555;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  padding: 0;
+}
+
+
+
+.stash-add-to-draft {
+  left: -3px;
+  background-color: hsl(124, 28%, 65%);
+}
+
+.stash-add-to-draft:hover {
+  background-color: hsl(124, 43%, 50%);
+}
+
+.stash-remove-from-stash {
+  right: -3px;
+  background-color: hsl(0, 57%, 82%);
+}
+
+.stash-remove-from-stash:hover {
+  background-color: hsl(0, 67%, 72%);
 }
