Majorly overhauled the search bar and it now looks fantstic! Also added a viewport meta tag to improve SEO and compression middleware to improve performace majorly (from 3.6s to 1.6s!!! That's 55.55%!!!)

--- a/client/app/components/TopBanner/Search/SearchListItem.css
+++ b/client/app/components/TopBanner/Search/SearchListItem.css
@@ -1,8 +1,7 @@
 .search-item {
-  width: 301px;
+  width: 100%;
   min-height: 1.5rem;
-  padding: 1px 5px;
-  padding-right: 0;
+  padding: 1px 0 1px 10px;
   background-color: #fff;
   display: flex;
   align-items: center;
