--- a/client/app/components/TopBanner/Search/SearchList.css
+++ b/client/app/components/TopBanner/Search/SearchList.css
@@ -1,11 +1,6 @@
 #search-list {
-  z-index: 5;
-  position: absolute;
-  width: 306px;
-  border: 1px solid #000;
-  border-radius: 2px;
-  box-shadow: 1px 1px 2px #808080,
-              -1px 1px 2px #808080;
+  width: 100%;
+  border-top: 1px solid #888;
   display: flex;
   flex-direction: column;
 }
