--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -42,6 +42,7 @@ body {
 #app-grid-top-row-left-col {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   border-right: 1px solid #000;
+  overflow: hidden;
 }
