--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -41,8 +41,9 @@ body {
 
 #app-grid-top-row-left-col {
   display: flex;
+  position: relative;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   border-right: 1px solid #000;
   overflow: hidden;
 }
