disabled card image display on search and cards with the layout "meld"

--- a/client/app/components/TopBanner/Search/SearchListItem.css
+++ b/client/app/components/TopBanner/Search/SearchListItem.css
@@ -12,7 +12,7 @@
   background-color: #dddddd;
 }
 
-.invisible {
+/* .invisible {
   display: none;
 }
 
@@ -28,4 +28,4 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 0 4px 2px #808080;
-}
+} */
