--- a/client/app/components/TopBanner/Search/Search.css
+++ b/client/app/components/TopBanner/Search/Search.css
@@ -2,7 +2,7 @@
 #search-area-focused {
   position: absolute;
   z-index: 3;
-  top: 12.5%;
+  top: 10px;
   right: 15px;
   border: 1px solid #000;
   overflow: hidden;
