--- a/client/app/components/CardPreview/CardPreview.css
+++ b/client/app/components/CardPreview/CardPreview.css
@@ -7,11 +7,13 @@
   column-gap: 20px;
   padding: 20px;
   transition: grid-template-rows 1s;
+  -webkit-transition: grid-template-rows 1s;
 }
 
 .right-col-no-stash {
   grid-template-rows: 25% 75%;
   transition: grid-template-rows 1s;
+  -webkit-transition: grid-template-rows 1s;
 }
 
 .app-grid-top-row-right-col p {
@@ -40,6 +42,8 @@
   transform: rotate(0deg);
   transition: all .8s;
   backface-visibility: hidden;
+  -webkit-transition: all .8s;
+  -webkit-backface-visibility: hidden;
 }
 
 .card-preview-image-container,
@@ -52,6 +56,7 @@
 .card-preview-image-container {
   transform: rotate(0deg);
   transition: all .8s;
+  -webkit-transition: all .8s;
 }
 
 .transformed-card-preview-image-container {
@@ -59,17 +64,21 @@
   transition: all .8s;
   transform-style: preserve-3d;
   backface-visibility: hidden;
+  -webkit-transition: all .8s;
+  -webkit-backface-visibility: hidden;
 }
 
 .flipped-card-preview-image-container {
   transform: rotate(180deg);
   transition: transform .8s;
+  -webkit-transition: all .8s;
 }
 
 .rotated-card-preview-image-container {
   max-width: 234px;
   max-height: 325px;
   transition: all .8s;
+  -webkit-transition: all .8s;
 }
 
 .card-preview-image-container img,
@@ -85,11 +94,13 @@
 .split-card-rotate-cw {
   transform: rotate(90deg);
   transition: all .8s;
+  -webkit-transition: all .8s;
 }
 
 .split-card-rotate-ccw {
   transform: rotate(-90deg);
   transition: all .8s;
+  -webkit-transition: all .8s;
 }
 
 .card-image-action-button {
