--- a/client/app/components/TopBanner/Search/Search.css
+++ b/client/app/components/TopBanner/Search/Search.css
@@ -22,12 +22,14 @@
   box-shadow: 1px 1px 2px #a0a0a0,
               -1px 1px 2px #a0a0a0;
   transition: box-shadow .2s;
+  -webkit-transition: box-shadow .2s;
 }
 
 #search-area-focused {
   box-shadow: 2px 2px 4px #808080,
               -2px 2px 4px #808080;
   transition: box-shadow .2s;
+  -webkit-transition: box-shadow .5s;
 }
 
 #search-bar {
@@ -38,6 +40,7 @@
   border: none;
   padding: 0 2rem 0 2.25rem;
   transition: box-shadow .2s;
+  -webkit-transition: box-shadow .5s;
 }
 
 #search-error {
