--- a/client/app/components/DraftList/DraftList.css
+++ b/client/app/components/DraftList/DraftList.css
@@ -1,8 +1,17 @@
+#app-grid-top-row-left-col {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  border-right: 1px solid #000;
+  overflow: hidden;
+}
+
 .draft-list {
   position: relative;
-  min-height: 600px;
+  min-height: 580px;
   min-width: 500px;
-  overflow: auto;
+  margin-left: calc(25vw - 250px);
   border: 3px solid #000;
   background-color: #F0F0F0;
   padding-top: 5px;
@@ -18,4 +27,18 @@
 .drafted-card img {
   border-radius: 10px;
   border: 1px solid #000;
+}
+
+#draft-carrousel-back,
+#draft-carrousel-next {
+  position: absolute;
+  z-index: 5;
+}
+
+#draft-carrousel-next {
+  left: 45vw;
+}
+
+#draft-carrousel-back {
+  left: 5vw;
 }
