Tried to experiment with a way to make the carousel more effecient but they were unfruitful and will remain on the back-burner for now

--- a/client/app/components/DraftList/DraftList.css
+++ b/client/app/components/DraftList/DraftList.css
@@ -42,3 +42,12 @@
 #draft-carousel-back {
   left: 5vw;
 }
+
+/* .not-shifted {
+  left: 0;
+}
+
+.left-shifted {
+  left: calc((25vw + 250px + 6px) * -1);
+  transition: left .5s;
+} */
