--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -1,10 +1,16 @@
+:root {
+  --bg-color: #2f2f2b;
+  --orange-hl: #ff7128;
+}
+
 html {
-  background-color: #FAFAFA;
+  background-color: var(--bg-color);
+  color: #fff;
   font-family: 'Roboto', sans-serif;
 }
 
 body {
-  background-color: #FAFAFA;
+  background-color: var(--bg-color);
   margin: 0;
 }
 
@@ -22,6 +28,21 @@ ul {
   margin-inline-start: 0;
   margin-inline-end: 0;
   padding-inline-start: 0;
+}
+
+.button-style {
+  background-color: var(--orange-hl);
+  color: #fff;
+  border: 2px solid var(--orange-hl);
+  border-radius: 5px;
+  transition: background-color .2s;
+  -webkit-transition: background-color .2s;
+}
+
+.button-style:hover {
+  background-color: transparent;
+  transition: background-color .2s;
+  -webkit-transition: background-color .2s;
 }
 
 .app-container {
@@ -43,5 +64,5 @@ ul {
   grid-row-start: 1;
   display: grid;
   grid-template-columns: 50% 50%;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid var(--orange-hl);
 }
