--- a/client/app/components/DraftList/DraftList.css
+++ b/client/app/components/DraftList/DraftList.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  border-right: 1px solid #000;
+  border-right: 1px solid var(--orange-hl);
   overflow: hidden;
 }
 
@@ -41,6 +41,8 @@
 
 #draft-carousel-back,
 #draft-carousel-next {
+  width: 25px;
+  height: 50px;
   position: absolute;
   z-index: 5;
 }
