--- a/client/app/components/TopBanner/Search/SearchListItem.css
+++ b/client/app/components/TopBanner/Search/SearchListItem.css
@@ -3,6 +3,7 @@
   min-height: 1.5rem;
   padding: 1px 0 1px 10px;
   background-color: #fff;
+  color: #000;
   display: flex;
   align-items: center;
   cursor: pointer;
