--- a/client/app/components/DraftList/DraftList.css
+++ b/client/app/components/DraftList/DraftList.css
@@ -22,8 +22,8 @@
   min-height: 580px;
   min-width: 500px;
   margin-left: calc(25vw - 250px);
-  border: 3px solid #000;
-  background-color: #F0F0F0;
+  border: 3px solid var(--orange-hl);
+  background-color: rgba(240, 240, 240, .05);
   padding-top: 5px;
 }
 
@@ -37,6 +37,10 @@
 .drafted-card img {
   border-radius: 10px;
   border: 1px solid #000;
+}
+
+.drafted-card img:hover {
+  border-color: var(--orange-hl);
 }
 
 #draft-carousel-back,
