--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -31,12 +31,15 @@ ul {
 }
 
 .button-style {
-  background-color: var(--orange-hl);
   color: #fff;
+  background-color: var(--orange-hl);
   border: 2px solid var(--orange-hl);
   border-radius: 5px;
   transition: background-color .2s;
   -webkit-transition: background-color .2s;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
 }
 
 .button-style:hover {
