--- a/client/app/components/DraftList/DraftList.css
+++ b/client/app/components/DraftList/DraftList.css
@@ -23,7 +23,7 @@
   min-width: 500px;
   margin-left: calc(25vw - 250px);
   border: 3px solid var(--orange-hl);
-  background-color: rgba(240, 240, 240, .05);
+  background-color: #393935;
   padding-top: 5px;
 }
 
@@ -43,8 +43,8 @@
   border-color: var(--orange-hl);
 }
 
-#draft-carousel-back,
-#draft-carousel-next {
+.draft-carousel-button {
+  font-size: 1.25rem;
   width: 25px;
   height: 50px;
   position: absolute;
@@ -58,12 +58,3 @@
 #draft-carousel-back {
   left: 5vw;
 }
-
-/* .not-shifted {
-  left: 0;
-}
-
-.left-shifted {
-  left: calc((25vw + 250px + 6px) * -1);
-  transition: left .5s;
-} */
