--- a/client/app/components/TheStash/TheStash.css
+++ b/client/app/components/TheStash/TheStash.css
@@ -17,17 +17,15 @@
 
 .collapse-stash-btn {
   position: absolute;
-  top: -26px;
+  top: -25px;
   left: 10px;
-  width: 50px;
+  width: 100px;
+  height: 25px;
   border: 1px solid var(--orange-hl) !important;
   border-radius: 10px !important;
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
-  border-bottom: transparent !important;
-  outline: none;
-  cursor: pointer;
-  font-weight: 700;
+  border-bottom: none !important;
   font-size: 1.25rem;
 }
 
@@ -43,10 +41,10 @@
   -webkit-transition: transform .5s;
 }
 
-.show-stash-list,
-.hide-stash-list {
+#stash-list {
   overflow: hidden;
   height: 100%;
+  margin: 0 60px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -62,4 +60,20 @@
   opacity: 0;
   transition: opacity 1s, bottom 2s;
   -webkit-transition: opacity 1s, bottom 2s;
+}
+
+.stash-carousel-button {
+  position: absolute;
+  height: 50px;
+  width: 25px;
+  top: calc(50% - 25px);
+  font-size: 1.25rem;
+}
+
+#stash-back-button {
+  left: 20px;
+}
+
+#stash-next-button {
+  right: 20px;
 }
