--- a/client/app/components/TheStash/TheStash.css
+++ b/client/app/components/TheStash/TheStash.css
@@ -6,7 +6,8 @@
   transition: bottom .5s;
   -webkit-transition: bottom .5s;
   background-color: var(--bg-color);
-  border-top: 1px solid var(--orange-hl);
+  border-top: 2px solid var(--orange-hl);
+  /* border-top: 1px solid var(--orange-hl); */
 }
 
 .collapsed {
@@ -21,7 +22,8 @@
   left: 10px;
   width: 100px;
   height: 25px;
-  border: 1px solid var(--orange-hl) !important;
+  border: 2px solid var(--orange-hl) !important;
+  /* border: 1px solid var(--orange-hl) !important; */
   border-radius: 10px !important;
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
