--- a/client/app/components/CardPreview/CardPreview.css
+++ b/client/app/components/CardPreview/CardPreview.css
@@ -111,6 +111,10 @@
   font-size: 1rem;
 }
 
+.card-image-action-button i {
+  font-size: .8rem;
+}
+
 .card-preview-text-container {
   grid-column-start: 2;
   grid-row-start: 2;
