--- a/client/app/components/TopBanner/TopBanner.css
+++ b/client/app/components/TopBanner/TopBanner.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   height: 58px;
-  background-color: var(--bg-color);
+  background-color: var(--top-blue);
   border-bottom: 2px solid var(--orange-hl);
 }
 
