--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -67,3 +67,17 @@ ul {
   transition: background-color .2s, border .2s;
   -webkit-transition: background-color .2s, border .2s;
 }
+
+.link-style {
+  color: var(--orange-hl);
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.link-style:hover {
+  text-decoration: underline;
+}
+
+.link-style:visited {
+  color: var(--orange-hl);
+}
