--- a/client/app/components/SignInPage/SignInPage.css
+++ b/client/app/components/SignInPage/SignInPage.css
@@ -71,8 +71,8 @@
   align-items: center;
   width: calc(100% - 15rem);
   height: calc(10% - 2rem);
-  box-shadow: 0 -1px 2px rgba(205, 205, 205, .5);
-  background-color: var(--top-blue);
+  box-shadow: 0 -1px 2px rgba(140, 156, 200, 0.5);
+  background-color: hsl(210, 54%, 22%);
   padding: 1rem 5rem 1rem 10rem;
   font-size: 1.125rem;
 }
@@ -89,7 +89,7 @@
 }
 
 #signin-page-close-popup:hover {
-  color: hsl(20, 100%, 63%);
+  color: hsl(20, 100%, 83%);
   text-shadow: -1px 1px 0 rgba(255, 113, 40, .5),
                -2px 2px 2px #000;
   transition: text-shadow .3s, color .3s;
