--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -54,7 +54,7 @@ ul {
 }
 
 .disabled-button-style {
-  color: #000;
+  color: rgba(255, 255, 255, .75);
   background-color: rgba(255, 113, 40, .3);
   border: 2px solid rgba(255, 113, 40, .1);
   cursor: not-allowed;
