made some QOL changes to make the homepage scroll

--- a/client/app/components/DraftPage/TheStash/TheStash.css
+++ b/client/app/components/DraftPage/TheStash/TheStash.css
@@ -7,10 +7,10 @@
   -webkit-transition: bottom .5s;
   background-color: var(--bg-color);
   border-top: 2px solid var(--orange-hl);
-  /* border-top: 1px solid var(--orange-hl); */
 }
 
 .collapsed {
+  border: none;
   bottom: 0%;
   transition: bottom .5s;
   -webkit-transition: bottom .5s;
@@ -23,7 +23,6 @@
   width: 100px;
   height: 25px;
   border: 2px solid var(--orange-hl) !important;
-  /* border: 1px solid var(--orange-hl) !important; */
   border-radius: 10px !important;
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
