Sandbox at homepage nav bar now navigates to the draft page and the draft page title now navigates to the home page

--- a/client/app/components/DraftPage/TopBanner/TopBanner.css
+++ b/client/app/components/DraftPage/TopBanner/TopBanner.css
@@ -12,6 +12,15 @@
   font-size: 2rem;
 }
 
+#draftpage-link {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#draftpage-link:visited {
+  color: white;
+}
+
 #turn-changer {
   margin: auto 50px;
 }
